fixing overflow genre text

--- a/src/styles/MovieDetail.scss
+++ b/src/styles/MovieDetail.scss
@@ -6,6 +6,7 @@
     width: 100%;
     height: 100%;
     position: relative;
+    overflow: hidden;
     // margin-bottom: 30px;
 }
   
